[package]
name = "ruvector-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Comprehensive benchmarks for temporal reasoning and vector operations"
publish = false

[dependencies]
# Core ruvector
ruvector-core = { path = "../../crates/ruvector-core", default-features = false, features = ["parallel"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Random and numerics
rand = "0.8"
rand_distr = "0.4"

# CLI and progress
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Async
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "time", "fs"] }
futures = "0.3"

# Time handling (critical for temporal benchmarks)
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Statistics
statistical = "1.0"
hdrhistogram = "7.5"

# HTTP for tool-augmented tests
reqwest = { version = "0.11", features = ["json"] }

# Visualization
plotters = { version = "0.3", optional = true }

[features]
default = []
visualize = ["plotters"]

[[bin]]
name = "temporal-benchmark"
path = "src/bin/temporal_benchmark.rs"

[[bin]]
name = "vector-benchmark"
path = "src/bin/vector_benchmark.rs"

[[bin]]
name = "swarm-regret"
path = "src/bin/swarm_regret.rs"

[[bin]]
name = "timepuzzle-runner"
path = "src/bin/timepuzzle_runner.rs"
