[package]
name = "rvf-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for RuVector Format vector stores"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
rust-version = "1.87"

[[bin]]
name = "rvf"
path = "src/main.rs"

[dependencies]
rvf-runtime = { path = "../rvf-runtime" }
rvf-types = { path = "../rvf-types", features = ["std"] }
rvf-wire = { path = "../rvf-wire" }
rvf-manifest = { path = "../rvf-manifest" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
serve = []
