[package]
name = "rvf-crypto"
version = "0.1.0"
edition = "2021"
description = "RuVector Format cryptographic primitives -- SHA-3 hashing and Ed25519 signing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector"
readme = "README.md"
categories = ["cryptography", "authentication"]
keywords = ["vector", "crypto", "sha3", "ed25519", "rvf"]
rust-version = "1.87"

[features]
default = ["std"]
std = []

[dependencies]
rvf-types = { version = "0.1.0", path = "../rvf-types" }
sha3 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
rand = "0.8"
