[package]
name = "rvf-types"
version = "0.1.0"
edition = "2021"
description = "RuVector Format core types -- segment headers, enums, flags"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector"
readme = "README.md"
categories = ["data-structures", "no-std"]
keywords = ["vector", "database", "binary-format", "simd"]
rust-version = "1.87"

[features]
default = []
std = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
