[package]
name = "cosmetic-wasm"
version = "0.1.0"
edition = "2021"
authors = ["RuVector Team"]
license = "MIT"
description = "CoSMeTIC: Computational Sparse Merkle Trees with Inclusion/exclusion Certificates - WASM"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["wasm", "merkle-tree", "zero-knowledge", "cryptography", "sparse-merkle-tree"]
categories = ["wasm", "cryptography", "data-structures"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]
# Enable Poseidon hash for ZK-friendly circuits
poseidon = []
# Enable computation attestation proofs
attestation = []
# Enable all features
full = ["poseidon", "attestation"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptographic hashing
sha2 = { version = "0.10", default-features = false }

# Error handling for WASM
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
